--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.3.1",
     "react-popupbox": "^2.0.8",
     "react-router-dom": "^5.3.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "4.0.3",
     "simple-react-lightbox": "^3.6.9-0",
     "swiper": "^7.3.1"
