--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@trendyol-js/react-carousel": "^2.0.0",
+    "animate.css": "^4.1.1",
     "axios": "^0.23.0",
     "babel-plugin-macros": "^3.1.0",
     "cors": "^2.8.5",
@@ -25,7 +26,8 @@
     "react-scripts": "4.0.3",
     "react-simple-chatbot": "^0.6.1",
     "simple-react-lightbox": "^3.6.9-0",
-    "swiper": "^7.3.1"
+    "swiper": "^7.3.1",
+    "wow.js": "^1.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
